--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <meta charset="UTF-8" />
     </head>
     <body>
@@ -15,7 +16,7 @@
                         <a href="#what-we-do">What We Do</a>
                     </li>
                     <li>
-                        <a href="#what-you-do">WHat You Do</a>
+                        <a href="#what-you-do">What You Do</a>
                     </li>
                     <li>
                         <a href="#your-trainers">Your Trainers</a>
