--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <link rel="stylesheet" href="./assets/css/style.css" />
         <meta charset="UTF-8" />
+        <title> Run Buddy </title>
     </head>
     <body>
         <!--navigation-->
         <header>
             <h1>
-                <a href="/">RUN BUDDY</a>
+                <a href="index.html"> RUN BUDDY </a>
             </h1>
             <nav>
                 <ul>
