add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         </header>
         
         <section class="hero">
+            <div class= "hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est atque laudantium pariatur molestiae illum beatae itaque fuga, consequuntur fugiat odio repudiandae quod neque aliquid placeat magnam adipisci laborum commodi?
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedul a consult</p>
